tests/misc/misc.exp
Error ---------------------------------------------------------------- A.js:13:7

Error: A.js:13
 13: A.x = A.y;
           ^^^ Cannot assign `A.y` to `A.x` because string [1] is incompatible with boolean [2].
  References:
   12: A.y = "?";
             ^^^ [1]: string
    6: var A = {x:true, ...{}};
                  ^^^^ [2]: boolean

Error ---------------------------------------------------------------- A.js:14:3

Error: A.js:14
 14: f(A.x); // A.x is now a string, by def assign
       ^^^ Cannot call `f` with `A.x` bound to `x` because string [1] is incompatible with boolean [2].
  References:
   12: A.y = "?";
             ^^^ [1]: string
    9: function f(x:boolean) { }
                    ^^^^^^^ [2]: boolean

Error ----------------------------------------------------------------- C.js:9:7

Error: C.js:9
  9:   f(o.b);
           ^ Cannot get `o.b` because property `b` is missing in new object [1].
  References:
    8:   var o = new B();
                 ^^^^^^^ [1]: new object

Error ---------------------------------------------------------------- C.js:10:5

Error: C.js:10
 10:   f(o.s);
         ^^^ Cannot call `f` with `o.s` bound to `x` because number [1] is incompatible with boolean [2].
  References:
   12: B.prototype.s = 0;
                       ^ [1]: number. See: B.js:12
    9: function f(x:boolean) { }
                    ^^^^^^^ [2]: boolean. See: A.js:9

Error ---------------------------------------------------------------- D.js:6:30

Error: D.js:6
  6: function g():string { return this.i; }
                                  ^^^^^^ Cannot return `this.i` because boolean [1] is incompatible with string [2].
  References:
    9: o.i = true;
             ^^^^ [1]: boolean
    6: function g():string { return this.i; }
                    ^^^^^^ [2]: string

Error ---------------------------------------------------------------- D.js:12:3

Error: D.js:12
 12: f(i);
       ^ Cannot call `f` with `i` bound to `x` because string [1] is incompatible with boolean [2].
  References:
    6: function g():string { return this.i; }
                    ^^^^^^ [1]: string
    9: function f(x:boolean) { }
                    ^^^^^^^ [2]: boolean. See: A.js:9

Error ----------------------------------------------------------------- E.js:8:6

Error: E.js:8
  8: o.fn(false);
          ^^^^^ Cannot call `o.fn` with `false` bound to `x` because boolean [1] is incompatible with number [2].
  References:
    8: o.fn(false);
            ^^^^^ [1]: boolean
    4: function h(x:number) { }
                    ^^^^^^ [2]: number

Error ---------------------------------------------------------------- F.js:1:26

Error: F.js:1
  1: function fn2(x) { return x.length * 4; }
                              ^^^^^^^^ Cannot perform arithmetic operation because string [1] is not a number.
  References:
    2: fn2({length: 'hi'});
                    ^^^^ [1]: string

Error ---------------------------------------------------------------- F.js:5:10

Error: F.js:5
  5:   return x.length;
              ^^^^^^^^ Cannot return `x.length` because number [1] is incompatible with string [2].
  References:
  275:     length: number;
                   ^^^^^^ [1]: number. See lib: <BUILTINS>/core.js:275
    4: function foo(x: Array<number>): string {
                                       ^^^^^^ [2]: string

Error ---------------------------------------------------------------- G.js:2:12

Error: G.js:2
  2: a.length = 123;
                ^^^ Cannot assign `123` to `a.length` because number [1] is incompatible with string [2].
  References:
    2: a.length = 123;
                  ^^^ [1]: number
    1: var a = { length: "duck" };
                         ^^^^^^ [2]: string

Error ----------------------------------------------------------------- G.js:3:3

Error: G.js:3
  3: a.length();
       ^^^^^^ Cannot call `a.length` because number [1] is not a function.
  References:
    2: a.length = 123;
                  ^^^ [1]: number

Error ---------------------------------------------------------------- G.js:6:12

Error: G.js:6
  6: b.length = "duck";
                ^^^^^^ Cannot assign `"duck"` to `b.length` because string [1] is incompatible with number [2].
  References:
    6: b.length = "duck";
                  ^^^^^^ [1]: string
  275:     length: number;
                   ^^^^^^ [2]: number. See lib: <BUILTINS>/core.js:275

Error ----------------------------------------------------------------- G.js:7:3

Error: G.js:7
  7: b.length();
       ^^^^^^ Cannot call `b.length` because string [1] is not a function.
  References:
    6: b.length = "duck";
                  ^^^^^^ [1]: string


Found 13 errors
